# PyXDM

./: README.md  environment.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml
pyxdm/: __init__.py  atomic_pols.py  cli.py  logger.py
pyxdm/core/: __init__.py  core.py  geometry.py  session.py
pyxdm/grids/: grid.py
pyxdm/partitioning/: partitioning.py
pyxdm/tests/: conftest.py  test_cli.py  test_formatting.py  test_grid.py  test_io.py  test_partitioning.py  test_session.py  test_water_mbis.py
pyxdm/tests/data/: proatomdb.h5  water.orca.molden.input
pyxdm/utils/: __init__.py  formatting.py  io.py
tests/: conftest.py  test_session.py  test_water_hirshfeld.py  test_water_mbis.py
utils/: README.md  fix_molden_normalization.py
